--- a/spring-creed-research/spring-creed-authorization-code/src/main/resources/templates/base-grant.html
+++ b/spring-creed-research/spring-creed-authorization-code/src/main/resources/templates/base-grant.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>授权</title>
+    <link rel="stylesheet" href="/index.css">
+    <script src="/vue.min.js"></script>
+    <script src="/index.js"></script>
+    <script src="/jquery.js"></script>
 </head>
 <style>
 
@@ -53,15 +57,50 @@
         <a href="#help">帮助</a>
     </div>
 </div>
-<div class="container">
+<div class="container" id="confirm">
     <h3 th:text="${clientId}+' 请求授权，该应用将获取你的以下信息'"></h3>
     <p>昵称，头像和性别</p>
     授权后表明你已同意 <a  href="#boot" style="color: #E9686B">OAUTH-BOOT 服务协议</a>
+
     <form method="post" action="/oauth/authorize">
         <input type="hidden" name="user_oauth_approval" value="true">
-        <input type="hidden" name="_csrf" th:value="${_csrf.getToken()}"/>
+        <div th:each="scope: ${scopes}">
+            [(${scope})] <input type="radio"  th:name="|scope.${scope}|" th:value="true" checked readonly />
+        </div>
         <button class="btn" type="submit"> 同意/授权</button>
     </form>
 </div>
 </body>
+<script type="text/javascript">
+    new Vue({
+        el : '#confirm',
+        data () {
+            return {
+                radio: '1',
+                checked: true
+            }
+        },
+        methods : {
+        }
+    })
+</script>
+<style lang="scss" scoped>
+    .login-container {
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+        -moz-border-radius: 5px;
+        background-clip: padding-box;
+        margin: 100px auto;
+        width: 320px;
+        padding: 35px 35px 15px 35px;
+        background: #fff;
+        border: 1px solid #eaeaea;
+        box-shadow: 0 0 25px #cac6c6;
+    }
+    .title {
+        margin: 0px auto 20px auto;
+        text-align: center;
+        color: #505458;
+    }
+</style>
 </html>
