--- a/spring-creed-research/spring-creed-authorization-code/src/main/resources/templates/base-login.html
+++ b/spring-creed-research/spring-creed-authorization-code/src/main/resources/templates/base-login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Insert title here</title>
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-    <script src="https://cdn.bootcss.com/vue/2.5.17/vue.min.js"></script>
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+    <link rel="stylesheet" href="/index.css">
+    <script src="/vue.min.js"></script>
+    <script src="/index.js"></script>
+    <script src="/jquery.js"></script>
 </head>
 <body>
 <div class="login-box" id="app" >
@@ -31,12 +31,12 @@
         data : {
             loading: false,
             username: 'admin',
-            password: 'admin'
+            password: '123456'
         },
         methods : {
             reset: function() {
                 this.username = 'admin'
-                this.password = 'admin'
+                this.password = '123456'
             }
         }
     })
